add Tag! perk functionality and enhance SPECIAL attribute display with colors

--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,12 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # index.html - no cache so browser always gets the latest version
+    location = /index.html {
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
+        try_files $uri =404;
+    }
+
     # SPA fallback - all other routes serve index.html
     location / {
         try_files $uri $uri/ /index.html;
